k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intranet-php-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intranet-php
  template:
    metadata:
      labels:
        app: intranet-php
    spec:
      containers:
        - name: intranet-php
          image: cozyruiz/intranet-php:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
