k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intranet-php-service
  namespace: prod
spec:
  selector:
    app: intranet-php
  ports:
  - port: 80
    targetPort: 80
