k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intranet-php-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: escalante-wildcard-tls
      hosts:
        - intranet-php-dev.escalante.com.mx
  rules:
    - host: intranet-php-dev.escalante.com.mx
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intranet-php-service
                port:
                  number: 80
